# rust-blog

./: .env  Cargo.toml  README.md
migrations/2021-06-29-205926_create_users/: up.sql
migrations/2021-06-30-040326_create_posts/: up.sql
src/: handlers.rs  lib.rs  main.rs  models.rs  schema.rs
