[package]
name = "rust-blog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "*"
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.13.0"
r2d2 = "*"
r2d2_mysql = "*"
serde = "1"
serde_json = "1"
